--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 </div>
 <div class="part06">
     <div class="title">
-        近1亿养宠家庭，盛宠店就在您身边
+        近1亿养宠家庭，圣宠店就在您身边
         <p style="font-size:24px;"><span>1100+</span>加盟连锁店实力见证，携手圣宠宠物，<span>起航您的创业梦</span> </p>
     </div>
     <div class="part06_inner">
